--- a/config.sample.yaml
+++ b/config.sample.yaml
@@ -1,6 +1,17 @@
-cols: 3
-lines: 3
-orientation: landscape
+page:
+  cols: 3
+  lines: 3
+  orientation: landscape
+# margins:
+#   top: 5.67 / 2
+#   bottom: 5.67 / 2
+#   left: 5.67 / 2
+#   right: 5.67 / 2
+# paddings:
+#   top: 2
+#   bottom: 2
+#   left: 2
+#   right: 2
 text:
   #font: /some/font.ttf
   ratio: 1/6
